--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Create Executable
       run: |
-        pyinstaller --onefile --windowed patch_configurator.py
+        pyinstaller --onefile --windowed --hidden-import pandas patch_configurator.py
 
     - name: Upload Executable
       uses: actions/upload-artifact@v4
