--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,7 @@
-name: Build Executable
+name: Build macOS Executable
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -13,29 +10,24 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: Set Up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.9"
+        python-version: 3.x
 
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller pandas openpyxl
+        pip install pyinstaller
 
-    - name: Build executable
+    - name: Create Executable
       run: |
-        pyinstaller --onefile \
-                    --add-data "config.py:." \
-                    --hidden-import pandas \
-                    --hidden-import openpyxl \
-                    patch_configurator.py
+        pyinstaller --onefile --windowed patch_configurator.py
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload Executable
+      uses: actions/upload-artifact@v3
       with:
-        name: patch_configurator_executable
+        name: macos-executable
         path: dist/patch_configurator
